Grease Pencil "stroke placement:surface" uses "stroke placement:stroke"s target parameters #66072

Closed
opened 2019-06-24 07:33:43 +02:00 by Jeff Dierstein · 4 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.65

Blender Version
Broken: d2.80 (sub 74), branch: master, commit date: 2019-06-22 23:57, hash:e7a0f0a9934e
Worked: (optional)

Short description of error

I hesitated to call this a bug since it's a highly useful feature with surface placement, once you realize what's happening.

So I don't want it 'fixed', but I do think these parameters should be available when "stroke placement:surface" is selected. Either as surface exclusive versions of the parameters or as shared parameters that are visible when either stroke or surface is selected.

Exact steps for others to reproduce the error

  • Load the default GPencil scene
  • Switch to object mode. Add a cube mesh
  • Global rotate the cube 45 degrees on Z, then 35 degrees on X
  • Select the GPencil object and switch to draw mode
  • Change stroke placement to 'stroke' and set the target to 'First point'
  • Change stroke placement to 'surface'. .(The attached .blend file sets things up to this point so don't have to. We're a full service bug report:))
  • Draw on one of the cube's sides with any of the GP drawing tools (It's generally easier to see what's happening on the sides, as opposed to the top, but the circle tool results are more noticeable on the top)
  • Change stroke placement to 'stroke' and set the target to 'All points'
  • Change stroke placement back to 'surface'
  • Draw another stroke on the cube's side, note the different behavior
    GP_surface_stroke_shared_target_demo.blend
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.65 **Blender Version** Broken: d2.80 (sub 74), branch: master, commit date: 2019-06-22 23:57, hash:e7a0f0a9934e Worked: (optional) **Short description of error** I hesitated to call this a bug since it's a highly useful feature with surface placement, once you realize what's happening. So I don't want it 'fixed', but I do think these parameters should be available when "stroke placement:surface" is selected. Either as surface exclusive versions of the parameters or as shared parameters that are visible when either stroke or surface is selected. **Exact steps for others to reproduce the error** - Load the default GPencil scene - Switch to object mode. Add a cube mesh - Global rotate the cube 45 degrees on Z, then 35 degrees on X - Select the GPencil object and switch to draw mode - Change stroke placement to 'stroke' and set the target to 'First point' - Change stroke placement to 'surface'. .(The attached .blend file sets things up to this point so don't have to. We're a full service bug report:)) - Draw on one of the cube's sides with any of the GP drawing tools (It's generally easier to see what's happening on the sides, as opposed to the top, but the circle tool results are more noticeable on the top) - Change stroke placement to 'stroke' and set the target to 'All points' - Change stroke placement back to 'surface' - Draw another stroke on the cube's side, note the different behavior [GP_surface_stroke_shared_target_demo.blend](https://archive.blender.org/developer/F7543840/GP_surface_stroke_shared_target_demo.blend)
Author

Added subscriber: @elkmug

Added subscriber: @elkmug
Jeff Dierstein changed title from Grease Pencil "stroke placement:surface" uses "stroke placement:strok"''s target parameters to Grease Pencil "stroke placement:surface" uses "stroke placement:stroke"''s target parameters 2019-06-24 07:47:54 +02:00
Jeff Dierstein changed title from Grease Pencil "stroke placement:surface" uses "stroke placement:stroke"''s target parameters to Grease Pencil "stroke placement:surface" uses "stroke placement:stroke"s target parameters 2019-06-24 07:48:23 +02:00

This issue was referenced by 3fb099bf81

This issue was referenced by 3fb099bf815271a4323e22054893b266fc9c9483
Antonio Vazquez self-assigned this 2019-06-24 10:15:37 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Resolved with commit 3fb099bf81

Resolved with commit 3fb099bf8152
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#66072
No description provided.