Fix T66072: GPencil "stroke placement:surface" uses "stroke placement:stroke"s target parameters

The stroke parameters were used in Surface mode becaus ethe mode was not checked.